# cloudwalk-challenge

./: README.md  main.py  pyproject.toml
notebooks/: 0-eda.ipynb  1-models.ipynb  df_cbk_users.xlsx  eda.ipynb
report/: project_report.html
results/run_20251217_190557/: results_20251217_190557.csv
src/: main.py  model.py  preprocess.py
src/artefacts/: base_model.pkl  model_config.pkl  preprocessor.pkl  tuned_model.pkl
