[project]
name = "cloudwatch-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "imbalanced-ensemble>=0.2.2",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "tsfel>=0.2.0",
    "xgboost>=3.1.2",
]
